<resources>
    <string name="app_name">BluEnergy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_blu_energy_drawer">Blu Energy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Sign Out</string>

    <string name="card_info_rewards_card">Rewards Card</string>
    <string name="card_info_fleet_card">Fleet Card</string>
    <string name="card_info_header">Which type of card do you have?</string>
    <string name="string_next">Next</string>

    <string name="signout">Sign Out</string>
    <string name="button_submit">Submit</string>
    <string name="button_next">Next</string>


    <string name="personal_info_year">Year</string>
    <string name="personal_info_day">Day</string>
    <string name="personal_info_header">Member Profile</string>
    <string name="personal_info_fname">FIRST NAME</string>
    <string name="personal_info_lname">LAST NAME</string>
    <string name="personal_info_bday">BIRTH DATE</string>

    <string name="verification_header">We Have Sent A Message To</string>
    <string name="verication_enter_code">Please Enter The Code</string>
    <string name="verification_sample">+639952874699</string>


    <string name="none">None</string>

    <string name="lorem">Lorem ipsum dolor sit amet, mei in eruditi accusam. Eos omnium feugait appetere cu. Summo ornatus ad sea. Ad mel error aeterno appareat, aliquip phaedrum ut vix. Ut dolore audire pro, docendi cotidieque nam ei. Vis vivendo quaerendum ex, clita accusam deleniti est an, ei homero habemus dignissim qui.
</string>
    <string name="lorem2">Lorem ipsum dolor sit amet, mei in eruditi accusam. Eos omnium feugait appetere cu. Summo ornatus ad sea. Ad mel error aeterno appareat, aliquip phaedrum ut vix. Ut dolore audire pro, docendi cotidieque nam ei. Vis vivendo quaerendum ex, clita accusam deleniti est an, ei homero habemus dignissim qui.

Ferri ipsum alterum usu ex. Vis et philosophia mediocritatem, sea nominavi gubergren voluptatum eu. Quo magna omittantur eu. Cum eu audire accumsan, sale posidonium sed te.

No harum legendos eum, wisi persius id per. Id mel commodo malorum, nec id dolor civibus. Omnium reprehendunt sea et, ei pro quem tantas feugiat. Delenit electram id eam, id clita labores scriptorem eam. Affert contentiones definitiones est id, eu stet lucilius has.

Aliquip integre accusamus mea ut. Ullum corrumpit dignissim in sit. Errem petentium sapientem ea est. Dicunt vivendum necessitatibus mei an, alia disputationi te per. Paulo adipisci deterruisset his te, vix at dico mundi.

Est soluta docendi consectetuer ei, has in munere mollis oporteat, eu duo definitionem signiferumque. Propriae albucius mel no. Nibh virtute nec ei, lorem nullam eum eu. Ad munere bonorum impedit nec, euismod nusquam vis ea, autem incorrupte duo ei. Simul laudem pericula no his. Duis quodsi has at.</string>

    <string-array name="months_array">
        <item>Month</item>
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="title_activity_station">Blu Energy Station</string>
</resources>
