<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bluenergyfuel.bluenergy.login.registration.PersonalInfo">

        <TextView
            android:id="@+id/nameHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/personal_info_header"
            android:textSize="36sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/firstName"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.0" />
        <TextView
            android:id="@+id/firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editFirst"
            android:layout_alignLeft="@+id/editFirst"
            android:layout_alignStart="@+id/editFirst"
            android:fontFamily="sans-serif"
            android:text="@string/personal_info_fname"
            android:textSize="12sp"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/lastName"
            android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/nameHeader"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editFirst"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/nameHeader"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/firstName"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editLast"
            android:layout_alignLeft="@+id/editLast"
            android:layout_alignStart="@+id/editLast"
            android:fontFamily="sans-serif"
            android:text="@string/personal_info_lname"
            android:textSize="12sp"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/editFirst"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/editLast"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editLast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/nameHeader"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/lastName"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editdate"
            android:layout_alignLeft="@+id/editdate"
            android:layout_alignStart="@+id/editdate"
            android:fontFamily="sans-serif"
            android:text="@string/personal_info_bday"
            android:textSize="12sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editLast"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/editdate"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.0" />


    <LinearLayout
        android:id="@+id/editdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/nameHeader"
        android:ems="10"
        android:inputType="textPersonName"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/personal_info_button"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0">

        <Spinner
            android:id="@+id/date_spinner"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="8dp" />

        <EditText
            android:id="@+id/date_day"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:hint="@string/personal_info_day"
            android:inputType="datetime"
            android:maxLength="2"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/date_year"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/personal_info_year"
            android:inputType="datetime"
            android:maxLength="4"
            android:textAlignment="center" />
    </LinearLayout>
        <Button
            android:id="@+id/personal_info_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/submit_button"
            android:backgroundTint="#00aced"
            android:text="@string/string_next"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="30sp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="36dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editdate" />

</android.support.constraint.ConstraintLayout>
